update: deletedCars action and API documentation
